--- a/data/opendistro/elasticsearch/config/elasticsearch.yml
+++ b/data/opendistro/elasticsearch/config/elasticsearch.yml
@@ -6,11 +6,8 @@ network.host: 0.0.0.0
 discovery.zen.minimum_master_nodes: 1
 cluster.initial_master_nodes: 
   - odfe-node1
-    #opendistro_security.disabled: true
 
 ######## Start OpenDistro for Elasticsearch Security Demo Configuration ########
-#opendistro_security.ssl.transport.enabled: false
-#opendistro_security.ssl.http.enabled: false
 opendistro_security.ssl.transport.pemcert_filepath: node.pem
 opendistro_security.ssl.transport.pemkey_filepath: node-key.pem
 opendistro_security.ssl.transport.pemtrustedcas_filepath: root-ca.pem
@@ -19,18 +16,16 @@ opendistro_security.ssl.http.enabled: true
 opendistro_security.ssl.http.pemcert_filepath: node.pem
 opendistro_security.ssl.http.pemkey_filepath: node-key.pem
 opendistro_security.ssl.http.pemtrustedcas_filepath: root-ca.pem
-#opendistro_security.allow_unsafe_democertificates: false 
-#opendistro_security.allow_default_init_securityindex: true
 opendistro_security.authcz.admin_dn:
-  - 'O=xx,L=Linz,ST=Upper Austria,C=AT'
+  - "CN=admin,O=xx,L=Linz,ST=Upper Austria,C=AT"
 opendistro_security.nodes_dn:
   - 'O=xx,L=Linz,ST=Upper Austria,C=AT'
 # disable client auth as this is a pain in the ass
-opendistro_security.ssl.http.clientauth_mode: NONE
+#opendistro_security.ssl.http.clientauth_mode: NONE
 #  - 'CN=twatzl.eu,C=AT'
 #opendistro_security.audit.type: internal_elasticsearch
 #opendistro_security.enable_snapshot_restore_privilege: true
 #opendistro_security.check_snapshot_restore_write_privileges: true
-#opendistro_security.restapi.roles_enabled: ["all_access", "security_rest_api_access"]
+opendistro_security.restapi.roles_enabled: ["all_access", "security_rest_api_access"]
 cluster.routing.allocation.disk.threshold_enabled: false
 node.max_local_storage_nodes: 3
