--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,11 @@ services:
       - ./node1-key.pem:/usr/share/elasticsearch/config/node-key.pem
       - ./admin.pem:/usr/share/elasticsearch/config/admin.pem
       - ./admin-key.pem:/usr/share/elasticsearch/config/admin-key.pem
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/internal_users.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/internal_users.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/roles_mapping.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles_mapping.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/tenants.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/tenants.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/roles.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/action_groups.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/action_groups.yml
     ports:
       - 9200:9200
       - 9600:9600 # required for Performance Analyzer
@@ -55,6 +60,11 @@ services:
       - ./node2-key.pem:/usr/share/elasticsearch/config/node-key.pem
       - ./admin.pem:/usr/share/elasticsearch/config/admin.pem
       - ./admin-key.pem:/usr/share/elasticsearch/config/admin-key.pem
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/internal_users.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/internal_users.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/roles_mapping.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles_mapping.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/tenants.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/tenants.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/roles.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles.yml
+      - ${DATA_PATH}/opendistro/elasticsearch/securityconfig/action_groups.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/action_groups.yml
     networks:
       - odfe-net
   kibana:
@@ -65,6 +75,8 @@ services:
     volumes:
       - ${DATA_PATH}/opendistro/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
       - ./root-ca.pem:/usr/share/kibana/config/root-ca.pem
+      - ./kibana-key.pem:/usr/share/kibana/config/kibana-key.pem
+      - ./kibana.pem:/usr/share/kibana/config/kibana.pem
     expose:
       - "5601"
     environment:
@@ -72,24 +84,35 @@ services:
       ELASTICSEARCH_HOSTS: https://odfe-node1:9200
     networks:
       - odfe-net
-  filebeat:
-    image: docker.elastic.co/beats/filebeat-oss:7.5.2
-    container_name: filebeat
-    user: root
+  logstash:
+    image: docker.elastic.co/logstash/logstash-oss:7.5.2
+    container_name: odfe-logstash
     volumes:
-      - "${DATA_PATH}/opendistro/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro"
-      - "/var/lib/docker/containers:/var/lib/docker/containers:ro"
-      - ./filebeat.pem:/etc/pki/client/node.pem
-      - ./filebeat-key.pem:/etc/pki/client/node-key.pem
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - ./root-ca.pem:/usr/share/filebeat/config/root-ca.pem
-    command: "-e -strict.perms=false"
+      - ${DATA_PATH}/opendistro/logstash/pipeline/:/usr/share/logstash/pipeline/
+      - ./root-ca.pem:/etc/logstash/config/certs/root-ca.pem
+      - ./logstash-key.pem:/etc/logstash/config/certs/logstash-key.pem
+      - ./logstash.pem:/etc/logstash/config/certs/logstash.pem
+    ports:
+      - "5044:5044"
     networks:
       - odfe-net
+    depends_on:
+      - odfe-node1
 
 volumes:
   odfe-data1:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '${DATA_PATH}/opendistro/elasticsearch/data/'
+
   odfe-data2:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '${DATA_PATH}/opendistro/elasticsearch/data/'
 
 networks:
   odfe-net:
